# terracoin_20150327

./: .gitignore  BUILD  ChangeLog  Makefile.am  README.md  TODO  configure.ac  terracoin-qt.pro
contrib/: terracoind.bash-completion
contrib/bitcoin-tool/: gen_address.sh  prefix.c  testnet-gen.sh
contrib/ci-targets/: 1.env-setup.sh  2.build-deps.sh
contrib/seeds/: makeseeds.py
qa/pull-tester/: run-bitcoind-for-test.sh.in  run-terracoind-for-test.sh.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoind.cpp  bitcoinrpc.cpp  chainparams.cpp  chainparams.h  checkpoints.cpp  clientversion.h  core.cpp  core.h  db.h  init.cpp  main.cpp  main.h  miner.cpp  rpcdump.cpp  rpcwallet.cpp  terracoin_nextworkrequired.cpp  terracoin_nextworkrequired.cpp.gmp  txmempool.cpp  util.cpp  version.cpp
src/m4/: bitcoin_subdir_to_include.m4  terracoin_find_bdb48.m4  terracoin_qt.m4
src/qt/: Makefile.am  bitcoin.cpp  bitcoingui.cpp  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  coincontroldialog.cpp  guiutil.cpp  guiutil.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  paymentserver.h  qrcodedialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsentry.cpp  terracoin.cpp  transactiondesc.cpp  walletmodel.cpp
src/qt/forms/: optionsdialog.ui
src/qt/locale/: bitcoin_en.ts
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: uritests.cpp
